# speedrun

./: Cargo.toml  README.md  ROADMAP.md  servers.json
.github/workflows/: auto-release.yml  release.yml
src/: config.rs  downloader.rs  gui.rs  main.rs  output.rs  servers.rs  title.rs  ui.rs
