[package]
name = "speedo"
version = "0.3.4"
edition = "2021"
description = "Network speed test tool and file downloader built in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/coryzibell/speedo"
keywords = ["network", "speed-test", "download", "benchmark", "cli"]
categories = ["command-line-utilities", "network-programming"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.{ archive-format }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-fmt = "zip"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["stream", "rustls-tls", "json"] }
tokio = { version = "1", features = ["full"] }
colored = "2.1"
indicatif = "0.17"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
inquire = "0.9.1"
clap = { version = "4.5", features = ["derive"] }
playbill = "0.1.4"
bytesize = "1.3"
chrono = { version = "0.4", features = ["serde"] }
